--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 body {
-  background: rgb(199, 199, 199);
+  background: rgb(195, 200, 200);
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
 }
 
-ol,
+/* ol,
 ul {
   padding-left: 30px;
-}
+} */
 
 .board-row:after {
   clear: both;
@@ -19,22 +19,25 @@ ul {
   margin: 10px;
   font-weight: bold;
   color: #545454;
+  text-align: center;
+  font-size: 17px;
 }
 
 .square {
-  background: rgb(255, 252, 205);
+  /* background: rgb(255, 252, 205); */
   border: 1px solid #999;
-  float: left;
-  font-size: 24px;
+  float: right;
+  font-size: 35px;
   font-weight: bold;
   line-height: 34px;
-  height: 44px;
+  height: 54px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 44px;
+  width: 54px;
   margin: 3px;
+  color: red;
 }
 
 .square:focus {
@@ -54,4 +57,5 @@ ul {
 
 .game-info {
   margin-left: 20px;
+  display: none;
 }
